crates/gpui-form-macros/tests/ui/fail/invalid_messages_without_adapter.rs
use gpui_form_macros::FormStore;

#[derive(FormStore)]
#[form(validation(messages = AppMessageProvider))]
struct Example {
    value: String,
}

fn main() {}
