crates/gpui-form-macros/tests/ui/fail/invalid_messages_without_adapter.stderr
error: `messages` is only supported by the Garde adapter
 --> tests/ui/fail/invalid_messages_without_adapter.rs:4:19
  |
4 | #[form(validation(messages = AppMessageProvider))]
  |                   ^^^^^^^^
